Archive2/dc/e13174a6d28650/output
main.cpp:8:1: error: unknown type name 'MovieData'
MovieData DisplayMovie(MovieData movie);
^
main.cpp:8:24: error: unknown type name 'MovieData'
MovieData DisplayMovie(MovieData movie);
                       ^
main.cpp:24:9: error: no matching function for call to 'DisplayMovie'
        DisplayMovie(movie1);
        ^~~~~~~~~~~~
main.cpp:8:11: note: candidate function not viable: no known conversion from 'MovieData' to 'int' for 1st argument
MovieData DisplayMovie(MovieData movie);
          ^
main.cpp:26:9: error: no matching function for call to 'DisplayMovie'
        DisplayMovie(movie2);
        ^~~~~~~~~~~~
main.cpp:8:11: note: candidate function not viable: no known conversion from 'MovieData' to 'int' for 1st argument
MovieData DisplayMovie(MovieData movie);
          ^
4 errors generated.
